@startuml

title __AMCWardPanels Package Diagram__\n


    namespace AMCWardPanels {
      class AMCWardPanels.BedButton {
          - ETD : LocalDateTime
          + BedButton()
          + Warning()
          + getBedButtonBedId()
          + getBedButtonStatus()
          + getETD()
          + makeClosed()
          + makeEmpty()
          + makeOpen()
          + printInfoClosed()
          + printInfoEmpty()
          + printInfoFull()
          + setETD()
          - editAge()
          - editBedGender()
          - editDiagnosis()
          - editETD()
          - editFrame()
          - editParameter()
          - selectWard()
      }
    }

  


    namespace AMCWardPanels {
      class AMCWardPanels.BedStatus {
          ~ ambarBeds : JLabel
          ~ blackBeds : JLabel
          ~ blueBeds : JLabel
          ~ greenBeds : JLabel
          ~ redBeds : JLabel
          + BedStatus()
          + setAmbarBedsNum()
          + setBlackBedsNum()
          + setBlueBedsNum()
          + setGreenBedsNum()
          + setLabel()
          + setRedBedsNum()
      }
    }

  


    namespace AMCWardPanels {
      class AMCWardPanels.Title {
          + Title()
      }
    }

  


    namespace AMCWardPanels {
      class AMCWardPanels.Topography {
          ~ beds : ArrayList<BedButton>
          ~ dbBeds : ArrayList<Bed>
          + Topography()
          + makeBedButtonGreen()
          + makeBedButtonRed()
      }
    }

  

    namespace AMCWardPanels {
      class AMCWardPanels.UIController {
          ~ mainPanel : JPanel
          ~ rhsPanel : JPanel
          + UIController()
          + UIController()
          + getMainPanel()
          + outline()
          - setupOne()
          - setupTwo()
      }
    }

  


    namespace AMCWardPanels {
      class AMCWardPanels.WardInfo {
          ~ disLabel : JLabel
          ~ disbut : JButton
          ~ inLabel : JLabel
          ~ inbut : JButton
          ~ othLabel : JLabel
          ~ othbut : JButton
          ~ totLabel : JLabel
          ~ totbut : JButton
          ~ transLabel : JLabel
          ~ transbut : JButton
          + WardInfo()
          + WardInfo()
          + addButton()
          + addLabel()
          + editButton()
          + editLabel()
          + setDisText()
          + setInText()
          + setOthText()
          + setTotText()
          + setTransText()
          - setup()
      }
    }

  

  AMCWardPanels.BedButton -up-|> javax.swing.JButton
  AMCWardPanels.BedButton o-- AMCWardPanels.Topography
  AMCWardPanels.BedButton o-- Client.Bed
  AMCWardPanels.BedButton o-- Methods.GeneralWard
  AMCWardPanels.BedStatus -up-|> javax.swing.JPanel
  AMCWardPanels.Title -up-|> javax.swing.JPanel
  AMCWardPanels.Topography -up-|> javax.swing.JPanel
  AMCWardPanels.Topography o-- AMCWardPanels.BedStatus
  AMCWardPanels.UIController o-- AMCWardPanels.BedStatus
  AMCWardPanels.UIController o-- Methods.AMCWard
  AMCWardPanels.UIController o-- Methods.LongstayWard
  AMCWardPanels.UIController o-- AMCWardPanels.Title
  AMCWardPanels.UIController o-- AMCWardPanels.Topography
  AMCWardPanels.UIController o-- AMCWardPanels.WardInfo
  AMCWardPanels.WardInfo -up-|> javax.swing.JPanel
  AMCWardPanels.WardInfo o-- Methods.GeneralWard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
